--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "broccoli",
+  "name": "ember-cli-broccoli",
   "description": "Fast client-side asset builder",
   "version": "0.16.9",
   "author": "Jo Liss <joliss42@gmail.com>",
