--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Fast client-side asset builder",
   "version": "0.17.1",
   "author": "Jo Liss <joliss42@gmail.com>",
-  "main": "lib/index.js",
+  "main": "lib/middleware.js",
   "license": "MIT",
   "keywords": [
     "builder",
@@ -19,24 +19,16 @@
   },
   "homepage": "https://github.com/ember-cli/broccoli",
   "dependencies": {
-    "findup-sync": "^0.2.1",
     "handlebars": "^4.0.4",
-    "heimdalljs": "^0.2.0",
-    "mime": "^1.2.11",
-    "promise-map-series": "^0.2.1",
-    "quick-temp": "^0.1.2",
-    "rimraf": "^2.2.8",
-    "rsvp": "^3.0.17"
+    "mime": "^1.2.11"
   },
   "devDependencies": {
-    "jshint": "~2.6.3",
-    "tap": "^0.4.8"
+    "jshint": "~2.6.3"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "pretest": "jshint lib test",
-    "test": "tap --stderr --timeout 10 ./test/*_test.js"
+    "test": "jshint lib"
   }
 }
