--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Jo Liss <joliss42@gmail.com>",
   "main": "lib/middleware.js",
   "files": [
-    "lib"
+    "lib",
+    "templates"
   ],
   "license": "MIT",
   "keywords": [
