add ability to quickly iterate on the error page

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jshint": "~2.9.4",
     "mocha": "^3.2.0",
     "mocha-eslint": "^2.0.1",
+    "nodemon": "^1.11.0",
     "request-promise": "^3.0.0",
     "rsvp": "^3.3.3"
   },
@@ -36,6 +37,7 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha",
+    "dev:errors": "nodemon dev-errors.js"
   }
 }
