--- a/.jshintrc
+++ b/.jshintrc
@@ -39,7 +39,7 @@
     "moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
                                  // (ex: `for each`, multiple try/catch, function expression…)
     "evil"          : true,      // true: Tolerate use of `eval` and `new Function()`
-    "expr"          : false,     // true: Tolerate `ExpressionStatement` as Programs
+    "expr"          : true,     // true: Tolerate `ExpressionStatement` as Programs
     "funcscope"     : false,     // true: Tolerate defining variables inside control statements"
     "globalstrict"  : false,     // true: Allow global "use strict" (also enables 'strict')
     "iterator"      : false,     // true: Tolerate using the `__iterator__` property
@@ -81,5 +81,8 @@
     "globals"       : {},       // additional predefined global variables
 
     // Suppress specific warnings
-    "-W058": true  // Missing '()' invoking a constructor.
+    "-W058": true,  // Missing '()' invoking a constructor.
+    "mocha": true,
+    "esnext": true,
+    "node": true
 }
