Beautify `broccoli-middleware`.

--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "express": "^4.13.4",
+    "eslint-plugin-chai-expect": "^1.1.1",
     "jshint": "~2.9.4",
     "mocha": "^2.4.5",
-    "mocha-jshint": "^2.3.1",
+    "mocha-eslint": "^2.0.1",
     "request-promise": "^3.0.0",
     "rsvp": "^3.3.3"
   },
