--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Broccoli asset builder middleware",
   "version": "1.0.0-beta.7",
   "author": "Jo Liss <joliss42@gmail.com>",
-  "main": "lib/middleware.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "keywords": [
     "builder",
