--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "rsvp": "^3.3.3"
   },
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "^4.5 || 6.* || 7.*"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha"
