--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "broccoli-middleware",
   "description": "Broccoli asset builder middleware",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "author": "Jo Liss <joliss42@gmail.com>",
   "main": "lib/index.js",
   "license": "MIT",
@@ -33,7 +33,7 @@
     "rsvp": "^4.6.1"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha"
